App configuration and settings

--- a/Chat/appsettings.json
+++ b/Chat/appsettings.json
@@ -7,5 +7,5 @@
         }
     },
     "AllowedHosts": "*",
-    "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING"
+    "ResourceConnectionString": "/subscriptions/9e18e233-f364-4531-a89f-6f62b6cf2bc0/resourceGroups/BL/providers/Microsoft.Communication/CommunicationServices/Chat_Endpoint"
 }
